@@ -538,15 +538,13 @@
 
         
         <playerList>
-                <!-- axis -->
-                <player name="Japanese" optional="false"/>
-                <player name="Germans" optional="false"/>
+                <!-- In turn order -->
                 <player name="Italians" optional="false"/>
-                
-                <!-- allies -->
-                <player name="British" optional="false"/>
-                <player name="Americans" optional="false"/>
                 <player name="Russians" optional="false"/>
+                <player name="Germans" optional="false"/>
+                <player name="British" optional="false"/>
+                <player name="Japanese" optional="false"/>
+                <player name="Americans" optional="false"/>
 
                 <!-- Axis alliance -->
                 <alliance player="Germans" alliance="Axis"/>
